Fixed header rendering error on firefox 3.6.24 (caused by header tag not rendered as block)

--- a/site-static/style.css
+++ b/site-static/style.css
@@ -79,6 +79,7 @@ footer a, footer a:hover, footer a:active {
     background: none;
 }
 header {
+    display: block;
     background-image: url('/static/img/header.png');
     background-repeat: no-repeat;
     margin: 32px auto 0 auto;
